--- a/CI_Jenkins/Jenkinsfile
+++ b/CI_Jenkins/Jenkinsfile
@@ -63,5 +63,25 @@ pipeline {
                 }
             }
         }
+
+        stage('UploadArtifact'){
+        	steps{
+        		nexusArtifactUploader(
+        			nexusVersion: 'nexus3',
+        			protocol: 'http',
+        			nexusUrl: '172.31.58.20:8081',
+        			groupId: 'QA',
+			        version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
+			        repository: 'vprofile-repo',
+			        credentialsId: 'nexuslogin',
+			        artifacts: [
+            			[artifactId: 'vproapp',
+             			 classifier: '',
+             			 file: 'target/vprofile-v2.war',
+             			 type: 'war']
+        ]
+     )
+        	}
+        }
 	}	
 }
